2004-03-11 Braden McDaniel  <braden@endoframe.com>

	Fixed node_initerface_matches_field function object semantics to
	match exposedFields as well as fields.  This is consistent with
	the way node_interface_matches_eventin and
	node_interface_matches_eventout match exposedFields as well as
	eventIns and eventOuts, respectively.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-03-11 Braden McDaniel  <braden@endoframe.com>

	Fixed comparator for node_interface_set to properly guard
	against collisions between exposedField names and eventIn and
	eventOut names.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* test/Makefile.am
	* test/node_interface_set.cpp

2004-03-10 Braden McDaniel  <braden@endoframe.com>

	Minor parse test suite reorg; added some tests to confirm
	failure on incorrect VRML.

	* test/parse/testsuite/Makefile.am
	* test/parse/testsuite/parse.bad/parse.exp:  Added file.
	* test/parse/testsuite/parse.bad/proto-eventin-conflict.wrl:
	Added file.
	* test/parse/testsuite/parse.bad/proto-eventout-conflict.wrl:
	Added file.
	* test/parse/testsuite/parse.good/parse.exp:  Added file.
	* test/parse/testsuite/parse.good/proto-containment-2-deep.wrl:
	Added file.
	* test/parse/testsuite/parse.good/proto-containment-trivial.wrl:
	Added file.
	* test/parse/testsuite/parse.good/proto-containment.wrl:  Added
	file.
	* test/parse/testsuite/parse.good/proto-field-is-proto.wrl:
	Added file.
	* test/parse/testsuite/parse.good/proto-impl-exposedfield-event-is.wrl:
	Added file.
	* test/parse/testsuite/parse.xpass/parse.exp:  Removed file.
	* test/parse/testsuite/parse.xpass/proto-containment-2-deep.wrl:
	Removed file.
	* test/parse/testsuite/parse.xpass/proto-containment-trivial.wrl:
	Removed file.
	* test/parse/testsuite/parse.xpass/proto-containment.wrl:
	Removed file.
	* test/parse/testsuite/parse.xpass/proto-field-is-proto.wrl:
	Removed file.