@@ -1,5 +1,12 @@
 2004-03-11 Braden McDaniel  <braden@endoframe.com>
 
+	Removed unused node_interface_id_equals function object.
+
+	* src/libopenvrml/openvrml/node.cpp
+	* src/libopenvrml/openvrml/node.h
+
+2004-03-11 Braden McDaniel  <braden@endoframe.com>
+
 	Fixed node_initerface_matches_field function object semantics to
 	match exposedFields as well as fields.  This is consistent with
 	the way node_interface_matches_eventin and
